--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <!-- header start -->
     <header>
       <nav>
         <h3 class="nav-title">G3 Architects</h3>
@@ -30,7 +31,32 @@
         <img src="images/banner.png" alt="" />
       </div>
     </header>
-    <main></main>
+    <!-- header end -->
+    <!-- main start -->
+    <main>
+      <!-- teams sections start -->
+      <section class="teams-container">
+        <div class="teams-img-container">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="teams-content">
+          <h1 class="teams-content-title">
+            <span class="s1">Quick list</span> <span class="s2">of Our</span> <span class="s3">Features</span>
+          </h1>
+          <p class="description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+      <!-- teams sections end -->
+    </main>
+    <!-- main end -->
     <footer></footer>
   </body>
 </html>
