--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header start -->
     <header>
       <nav>
-        <h3 class="nav-title">G3 Architects</h3>
+        <h3 class="section-title">G3 Architects</h3>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -55,6 +55,17 @@
         </div>
       </section>
       <!-- teams sections end -->
+      <!-- features sections start -->
+      <section class="features">
+
+      </section>
+      <!-- features sections end -->
+      <!-- facts section start -->
+      <section class="facts">
+        <h1 class="section-title">Some Facts</h1>
+        <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      </section>
+      <!-- facts section end -->
     </main>
     <!-- main end -->
     <footer></footer>
