facts finitsh with resposive design

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         </div>
         <div class="teams-content">
           <h1 class="teams-content-title">
-            <span class="s1">Quick list</span> <span class="s2">of Our</span> <span class="s3">Features</span>
+            <span class="s1">Quick list</span> <span class="s2">of Our</span>
+            <span class="s3">Features</span>
           </h1>
           <p class="description">
             There are many variations of passages of Lorem Ipsum available, but
@@ -56,14 +57,37 @@
       </section>
       <!-- teams sections end -->
       <!-- features sections start -->
-      <section class="features">
-
-      </section>
+      <section class="features"></section>
       <!-- features sections end -->
       <!-- facts section start -->
       <section class="facts">
         <h1 class="section-title">Some Facts</h1>
-        <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <p class="description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+        <div class="facts-card-container">
+          <div class="card">
+            <img src="images/icons/ribon.png" alt="" />
+            <h2 class="card-stats">54</h2>
+            <p class="card-title">Awards Winnings</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/projects.png" alt="" />
+            <h2 class="card-stats">1458</h2>
+            <p class="card-title">Project Finished</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/customers.png" alt="" />
+            <h2 class="card-stats">590</h2>
+            <p class="card-title">Clients Worked</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/email.png" alt="" />
+            <h2 class="card-stats">22578</h2>
+            <p class="card-title">Email Send</p>
+          </div>
+        </div>
       </section>
       <!-- facts section end -->
     </main>
