--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
         </div>
       </section>
       <!-- facts section end -->
+      <!-- sponsors section start -->
+      <section class="sponsors">
+        <h3 class="section-title">Our Sponsors</h3>
+        <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="sponsors-img-container">
+          <img src="images/sponsors/spotify.png" alt="">
+          <img src="images/sponsors/amazon.png" alt="">
+          <img src="images/sponsors/google.png" alt="">
+          <img src="images/sponsors/telerama.png" alt="">
+          <img src="images/sponsors/figma.png" alt="">
+        </div>
+      </section>
+      <!-- sponsors section end -->
     </main>
     <!-- main end -->
     <footer></footer>
