--- a/index.html
+++ b/index.html
@@ -50,14 +50,42 @@
           <p class="description">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
-            humour, or randomised words which don't look even
+            humour, or randomized words which don't look even
           </p>
           <button class="btn-primary">Explore More</button>
         </div>
       </section>
       <!-- teams sections end -->
       <!-- features sections start -->
-      <section class="features"></section>
+      <section class="features">
+        <div class="feature-content">
+          <h3 class="section-title">Features you will love & enjoy</h3>
+          <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+          <div class="card">
+            <h4 class="card-title">Desktop & Mobile Version</h4>
+            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized</p>
+          </div>
+          <div class="card">
+            <h4 class="card-title">Drag & Drop Builder</h4>
+            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized</p>
+          </div>
+          <div class="card">
+            <h4 class="card-title">Awesome Modern Design</h4>
+            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized</p>
+          </div>
+          <div class="card">
+            <h4 class="card-title">Super Easy to Edit</h4>
+            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized</p>
+          </div>
+        </div>
+        <div class="feature-img">
+          <img src="images/architect.png" alt="">
+          <div class="ten-years-badge">
+            <h2 class="section-title">10+ Year</h2>
+            <p class="description">Experience</p>
+          </div>
+        </div>
+      </section>
       <!-- features sections end -->
       <!-- facts section start -->
       <section class="facts">
