--- a/index.html
+++ b/index.html
@@ -60,26 +60,46 @@
       <section class="features">
         <div class="feature-content">
           <h3 class="section-title">Features you will love & enjoy</h3>
-          <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+          <p class="description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomized words which don't look even
+          </p>
           <div class="card">
             <h4 class="card-title">Desktop & Mobile Version</h4>
-            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized</p>
+            <p class="description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized
+            </p>
           </div>
           <div class="card">
             <h4 class="card-title">Drag & Drop Builder</h4>
-            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized</p>
+            <p class="description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized
+            </p>
           </div>
           <div class="card">
             <h4 class="card-title">Awesome Modern Design</h4>
-            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized</p>
+            <p class="description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized
+            </p>
           </div>
           <div class="card">
             <h4 class="card-title">Super Easy to Edit</h4>
-            <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized</p>
+            <p class="description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized
+            </p>
           </div>
         </div>
         <div class="feature-img">
-          <img src="images/architect.png" alt="">
+          <img src="images/architect.png" alt="" />
           <div class="ten-years-badge">
             <h2 class="section-title">10+ Year</h2>
             <p class="description">Experience</p>
@@ -121,18 +141,25 @@
       <!-- sponsors section start -->
       <section class="sponsors">
         <h3 class="section-title">Our Sponsors</h3>
-        <p class="description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <p class="description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
         <div class="sponsors-img-container">
-          <img src="images/sponsors/spotify.png" alt="">
-          <img src="images/sponsors/amazon.png" alt="">
-          <img src="images/sponsors/google.png" alt="">
-          <img src="images/sponsors/telerama.png" alt="">
-          <img src="images/sponsors/figma.png" alt="">
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
         </div>
       </section>
       <!-- sponsors section end -->
     </main>
     <!-- main end -->
-    <footer></footer>
+    <footer>
+      <p class="description">
+        All rights reserved copyright @ 2024 startup landing page design
+      </p>
+    </footer>
   </body>
 </html>
